stefan; 16 jul 2003: bug 3 fixeed (ptrIndex and ptrOne are declared as unique)
stefan; 15 jul 2003: bug 4 fixeed (unique indexes created and dropped in the DB as needed during table checking)
stefan; 4 jul 2003: unique MDD keyword supported on abstract level and is used in table creation (part of bug 4)
stefan; 2 jul 2003:improved solution for bug 449 (mak:value  maxLength, ellipsis...)
stefan; 2 jul 2003: fix for bug 366 (printVar for empty texts should be empty)
fred; 1 jul 2003: fixed bug 34 (logout design, with wildcard "*") 
stefan; 30 jun 2003: bug 449 (limiting output of mak:value with new tag parameter e.g. maxLength)  semi fixed

0.5.9.4; 30 jun 2003 cristi
bug 58: query tags now check for identical keys. the id attribute is suported and the programmer advised to use it to fix
bug 17: accepted for "value": 1, 'Yes', nil, $xxx (see also bug 375, bug 59)
support for dummy queries like "SELECT 5, nil, 'blabla'" for forms not included in a query
special type handlers for nil OQL projectons
bug 464: printing tag lines
fred: fix for bug 275
stefan; 27 jun 2003: bug 329 (chmod before ziping doc)  fixed
stefan; 27 jun 2003: bug 488 (ant tagJar will not work if lib/ doesn't exist) fixed

0.5.9.3; 26 jun 2003 cristi
0.5.9 major improvements:
completely refactored tag library, taking more advantage of page analysis
static page analysis, no need for attributes to be passed to the analysis. 
non-OQL-parameters restricted to where=, orderby= and groupBy=
0.5.9.3-specific
org.makumba.FieldDefinition exposes more functionality of org.makumba.abstr.FieldInfo
org.makumba.view.jsptaglib uses no org.makumba.abstr (it was using RecordInfo and FieldInfo)
better type checking in mak:input (addressing bugs 17, 451)
check for existence of form action (bug 357)
support for style, styleClass, styleId (bug 101) and possibility of adding more extra formatting

0.5.8.8; 21 jun 2003 fred
fixed bug 479 and 486 : parser cannot handle \n (newline) or \\ (backslash) in attribute value
